除自动核酸确认外，全部完成